plugins {
    id 'checkstyle'
    id 'idea'
    id 'jacoco'
    id 'java'
    id 'java-library'
    id 'java-test-fixtures'
    id 'maven-publish'
    id 'pmd'
}

group = 'com.core'

sourceCompatibility = 17
targetCompatibility = 17

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    testImplementation(
            'org.assertj:assertj-core:3.20.2',
            'org.junit.jupiter:junit-jupiter-api:5.7.2',
            'org.junit.jupiter:junit-jupiter-params:5.7.2',
            'org.mockito:mockito-core:3.6.28'
    )
    testFixturesImplementation(
            'org.assertj:assertj-core:3.20.2',
            'org.junit.jupiter:junit-jupiter-api:5.7.2',
            'org.junit.jupiter:junit-jupiter-params:5.7.2',
            'org.mockito:mockito-core:3.6.28'
    )
    testRuntimeOnly(
            'org.junit.jupiter:junit-jupiter-engine:5.7.2'
    )
}

compileJava {
    options.compilerArgs += ['-parameters', "-Xlint:unchecked", "-Xlint:deprecation", "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"]
}

compileTestJava {
    options.compilerArgs += ['-parameters', "-Xlint:unchecked", "-Xlint:deprecation", "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"]
}
checkstyle {
    toolVersion = '10.2'
    configFile = rootProject.file("config/checkstyle/checkstyle.xml")
    showViolations = true
    ignoreFailures = false
}

pmd {
    incrementalAnalysis = true
    toolVersion = '6.45.0'
    ruleSetConfig = resources.text.fromFile(rootProject.projectDir.toString()  + '/config/pmd/pmd.xml')
    ruleSets = []
    consoleOutput = true
    ignoreFailures = false
}

javadoc {
    options.addBooleanOption('html5', true)
    options.tags = ['apiSpec', 'apiNote', 'implSpec', 'implNote']
    exclude("**/HighPrecisionTime.java")
}
